# libchrysalis

./: .gitignore  CMakeLists.txt  README.md  premake5.lua  xmake.lua
docs/: Doxyfile
include/chrysalis/: chrysalis.h  common.h  load.h  load_unix.h  load_win32.h  renderer.h  util.h  window.h
include/chrysalis_implementation/: chrysalis.h  color.h  common.h  gfx_api_info.h  renderer.h  window.h
src/: sandbox.c  standalone.c
src/gl/: chrysalis-gl.c  gl.h
